<resources>
    <string name="app_name" translatable="false">m2git</string>
    <string name="default_text">Default Text</string>
    <string name="title_clone_repo">Clone Repository</string>
    <string name="preference_file_key" translatable="false">ts.realms.m2git</string>
    <string name="action_search">Search</string>
    <string name="action_clone">Clone</string>
    <string name="action_import_repo">Import</string>
    <string name="action_settings">Settings</string>
    <string name="action_mode_rename_key">Rename key</string>
    <string name="action_mode_rename_branch">Rename branch</string>
    <string name="action_manage_private_key">Private Keys</string>
    <string name="action_generate_private_key">Generate Key</string>
    <string name="action_import_private_key">Import Key</string>
    <string name="action_mode_show_private_key">Show private key</string>
    <string name="action_mode_show_public_key">Show public key</string>
    <string name="action_mode_edit_key_password">Edit key password</string>
    <string name="action_sort">Sort</string>
    <string name="action_tags">Tags</string>
    <string name="action_filter_tags">Filter</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_choose_language">Choose Language</string>
    <string name="action_mode_diff">Diff</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_save">Save</string>
    <string name="action_copy_all">Copy whole file</string>
    <string name="action_edit_in_other_app">Edit in other apps</string>
    <string name="action_reset">Reset</string>
    <string name="action_toggle_drawer">Toggle Drawer</string>
    <string name="action_copy_commit_str">Copy Commit Hash</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard</string>
    <string name="action_create_external_repo">Create External Repo</string>
    <string name="action_share_diff">Share diff</string>
    <string name="action_save_diff">Save diff</string>
    <string name="action_send_report">Send report</string>
    <string name="action_undo">Undo</string>
    <string name="action_export_settings">Export Settings</string>
    <string name="action_import_settings">Import Settings</string>
    <string name="label_ok">OK</string>
    <string name="label_remote_url">Remote URL</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_clone">Clone</string>
    <string name="label_init">Init</string>
    <string name="label_delete">Delete</string>
    <string name="label_generate_key">Generate key</string>
    <string name="label_dialog_generate_key">Generate key</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_new_file_name">New Filename</string>
    <string name="label_key_size">Key length</string>
    <string name="label_rename">Rename</string>
    <string name="label_send_feedback">Send Feedback</string>
    <string name="label_import">Import</string>
    <string name="label_push">Push</string>
    <string name="label_push_all">Push All</string>
    <string name="label_create">Create</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_git_name">Name</string>
    <string name="label_git_email">Email</string>
    <string name="label_git_name_per_repo">Committer name (this repo)</string>
    <string name="label_git_email_per_repo">Committer email (this repo)</string>
    <string name="label_done">Done</string>
    <string name="label_save">Save</string>
    <string name="label_choose_app_to_open">Open With …</string>
    <string name="label_choose_app_to_edit">Edit With …</string>
    <string name="label_new_branch_name">New Branch</string>
    <string name="label_anonymous_checkout">Anonymous checkout</string>
    <string name="title_activity_repo_detail">Repository</string>
    <string name="title_activity_import_repository">Import Repository</string>
    <string name="title_activity_view_file">File: </string>
    <string name="title_activity_commit_diff">Diff:   </string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="tab_files_label">Files</string>
    <string name="tab_file_label">File</string>
    <string name="tab_commits_label">Commits</string>
    <string name="tab_status_label">Status</string>
    <string name="dialog_choose_branch_title">Choose Branch</string>
    <string name="dialog_choose_option">Choose option...</string>
    <string name="label_edit_tags">Edit tags</string>
    <string name="dialog_edit_tags_title">Edit tags</string>
    <string name="dialog_filter_tags_title">Filter by tags</string>
    <string name="dialog_manage_tags_title">Manage tags</string>
    <string name="dialog_new_tag_title">New tag</string>
    <string name="dialog_new_tag_hint">Tag name</string>
    <string name="dialog_rename_tag_title">Rename tag</string>
    <string name="dialog_delete_tag_title">Delete tag</string>
    <string name="dialog_delete_tag_msg">Delete this tag? It will be removed from every repository.</string>
    <string name="tag_untagged">No tags</string>
    <string name="error_rename_tag_exists">A tag with that name already exists</string>
    <string name="label_add">Add</string>
    <string name="label_clear_filter">Clear</string>
    <string name="filter_mode_all">ALL</string>
    <string name="filter_mode_any">ANY</string>
    <string name="repo_list_empty">No repositories yet</string>
    <string name="repo_list_empty_filtered">No repository matches these tags</string>
    <string name="dialog_sort_title">Sort repositories</string>
    <string name="sort_section_key">Sort by</string>
    <string name="sort_key_name">Name</string>
    <string name="sort_key_last_commit">Last commit</string>
    <string name="sort_key_time_added">Date added</string>
    <string name="sort_section_direction">Direction</string>
    <string name="sort_dir_asc">Ascending</string>
    <string name="sort_dir_desc">Descending</string>
    <string name="pref_key_repo_sort_key" translatable="false">repo_sort_key</string>
    <string name="pref_key_repo_sort_direction" translatable="false">repo_sort_direction</string>
    <string name="pref_key_repo_tag_match_all" translatable="false">repo_tag_match_all</string>
    <string name="pref_key_repo_filter_tags" translatable="false">repo_filter_tags</string>
    <string name="repo_view_state_file" translatable="false">repo_view_state</string>
    <string name="dialog_rename_repo_title">Rename Repository</string>
    <string name="dialog_rename_repo_hint">Repository Name</string>
    <string name="dialog_delete_repo_title">Delete Confirmation</string>
    <string name="dialog_delete_repo_msg">Are you sure you want to delete this repository? All files within the repository will be removed.</string>
    <string name="dialog_rename_key_title">Rename</string>
    <string name="dialog_edit_key_password_title">Key Password</string>
    <string name="dialog_rename_branch_title">Rename</string>
    <string name="dialog_choose_language_title">Choose Language</string>
    <string name="dialog_comfirm_import_repo_title">Import Repository</string>
    <string name="dialog_comfirm_import_repo_msg">Are you sure you want to import this repository?</string>
    <string name="dialog_merge_title">Choose Branch To Merge</string>
    <string name="dialog_merge_checkbox">Commit after merge</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_file_delete_msg">Are you sure you want to delete this file or directory from working directory?</string>
    <string name="dialog_file_remove_cached">Remove Cached File</string>
    <string name="dialog_file_remove_cached_msg">Are you sure you want to delete this file or directory from index?</string>
    <string name="dialog_file_remove_force">Remove Force File</string>
    <string name="dialog_file_remove_force_msg">Are you sure you want to delete this file or directory from working directory and index?</string>
    <string name="dialog_key_delete">Delete Key</string>
    <string name="dialog_key_delete_msg">Are you sure you want to delete this key?</string>
    <string name="dialog_branch_delete">Delete Branch</string>
    <string name="dialog_branch_delete_msg">Are you sure you want to delete this branch?</string>
    <string name="dialog_reset_commit_title">Reset Changes</string>
    <string name="dialog_reset_commit_msg">Are you sure you want to discard all the changes?</string>
    <string name="dialog_create_dir_title">New Directory</string>
    <string name="dialog_create_dir_hint">Directory Name</string>
    <string name="preference_repo_location">Root storage location for repos</string>
    <string name="pref_category_title_general">General</string>
    <string name="pref_key_repo_root_location" translatable="false">repo_root_path</string>
    <string name="pref_category_title_git_profile">Git Profile</string>
    <string name="pref_key_git_user_name" translatable="false">user.name</string>
    <string name="preference_git_user_name">User Name</string>
    <string name="pref_key_git_user_email" translatable="false">user.email</string>
    <string name="preference_git_user_email">User Email</string>
    <string name="pref_category_title_about">About</string>
    <string name="preference_send_feedback">Feedback</string>
    <string name="preference_send_feedback_summary">Submit feedback by creating a new issue on GitHub</string>
    <string name="preference_key_app_version" translatable="false">app_version</string>
    <string name="preference_app_version">Version</string>
    <string name="preference_manage_ssh_keys_summary">Manage SSH Keys</string>
    <string name="preference_manage_ssh_keys">SSH Keys</string>
    <string name="preference_use_gravatar">Use gravatar images</string>
    <string name="preference_use_gravatar_summary">Load avatar images from cravatar.cn</string>
    <string name="pref_key_use_gravatar" translatable="false">use.cravatar</string>
    <string name="pref_category_title_security">Security</string>
    <string name="preference_use_theme">Select Colour Theme</string>
    <string name="pref_key_use_theme_id" translatable="false">color_theme_id</string>
    <string name="preference_personal_access_tokens_account">Token Name</string>
    <string name="preference_personal_access_tokens_secret_key">Token Secret</string>
    <string name="pref_key_personal_access_tokens_account" translatable="false">token_account</string>
    <string name="pref_key_personal_access_tokens_secret_key" translatable="false">token_secret_key</string>
    <string name="pref_key_manage_ssh_keys" translatable="false">manage_ssh_keys</string>
    <string name="pref_key_send_feedback" translatable="false">send_feedback</string>
    <string name="pref_key_credential_manager" translatable="false">credential_manager</string>
    <string name="preference_credential_manager_summary">CredentialManager</string>
    <string name="title_activity_credential_manager">CredentialManager</string>
    <string name="preference_eng_lang">English Language</string>
    <string name="preference_eng_lang_summary">Use English instead of the default language</string>
    <string name="pref_key_use_english" translatable="false">use.english</string>
    <string name="pref_key_export_settings" translatable="false">export_settings</string>
    <string name="pref_key_import_settings" translatable="false">import_settings</string>
    <string name="preference_export_settings">Export Settings</string>
    <string name="preference_import_settings">Import Settings</string>
    <string name="preference_export_settings_summary">Export all repos, credentials and settings to encrypted file</string>
    <string name="preference_import_settings_summary">Import from encrypted backup file</string>
</resources>