<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_title_general">
        <Preference
            android:key="@string/pref_key_repo_root_location"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_repo_location" />
        <ListPreference
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_ids"
            android:key="@string/pref_key_use_theme_id"
            android:persistent="true"
            android:title="@string/preference_use_theme" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_use_english"
            android:persistent="true"
            android:summary="@string/preference_eng_lang_summary"
            android:title="@string/preference_eng_lang" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_git_profile">
        <EditTextPreference
            android:key="@string/pref_key_git_user_name"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_git_user_name" />
        <EditTextPreference
            android:inputType="textEmailAddress"
            android:key="@string/pref_key_git_user_email"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_git_user_email" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_security">
        <EditTextPreference
            android:key="@string/pref_key_personal_access_tokens_account"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_personal_access_tokens_account" />
        <EditTextPreference
            android:key="@string/pref_key_personal_access_tokens_secret_key"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_personal_access_tokens_secret_key" />
        <Preference
            android:key="@string/pref_key_credential_manager"
            android:persistent="true"
            android:summary="@string/preference_credential_manager_summary"
            android:title="@string/title_activity_credential_manager" />
        <Preference
            android:key="@string/pref_key_manage_ssh_keys"
            android:persistent="true"
            android:summary="@string/preference_manage_ssh_keys_summary"
            android:title="@string/preference_manage_ssh_keys" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_use_gravatar"
            android:persistent="true"
            android:summary="@string/preference_use_gravatar_summary"
            android:title="@string/preference_use_gravatar" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Backup">
        <Preference
            android:key="@string/pref_key_export_settings"
            android:persistent="false"
            android:summary="@string/preference_export_settings_summary"
            android:title="@string/preference_export_settings" />
        <Preference
            android:key="@string/pref_key_import_settings"
            android:persistent="false"
            android:summary="@string/preference_import_settings_summary"
            android:title="@string/preference_import_settings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="webdav">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_webdav_server"
            android:summary="本地webdav服务器"
            android:title="启用webdav" />
        <EditTextPreference
            android:key="@string/pref_key_webdav_home_dir"
            android:persistent="true"
            android:summary="%s"
            android:title="Home" />
        <EditTextPreference
            android:key="@string/pref_key_webdav_port"
            android:persistent="true"
            android:summary="%s"
            android:title="Port" />
        <EditTextPreference
            android:key="@string/pref_key_webdav_user"
            android:persistent="true"
            android:summary="%s"
            android:title="User" />
        <EditTextPreference
            android:key="@string/pref_key_webdav_password"
            android:persistent="true"
            android:summary="%s"
            android:title="Password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_about">
        <Preference
            android:key="@string/pref_key_send_feedback"
            android:summary="@string/preference_send_feedback_summary"
            android:title="@string/preference_send_feedback" />
        <Preference
            android:key="@string/preference_key_app_version"
            android:persistent="true"
            android:selectable="false"
            android:summary="%s"
            android:title="@string/preference_app_version" />
    </PreferenceCategory>

</PreferenceScreen>
